# DerrickMarcus.github.io

./: .gitignore  404.html  CNAME  Dockerfile  LICENSE  README.md  about.html  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  zensical.toml
.github/workflows/: PublishMySite.yml
about/: index.html
blog/: index.html
blog/archive/: 2025.html
blog/category/: environment.html  railway.html  research-robot.html  research.html  robot.html  sport.html  technology-robot-environment.html  technology.html
computer_basic/: about_computer.html  index.html
computer_basic/environment/: about_environment.html  index.html  javascript.html  python.html  ubuntu.html
course_labs/: about_labs.html  index.html  index_labs.html
course_labs/data_algorithm/: index.html  oj1.html  oj10.html  oj2.html  oj3.html  oj4.html  (+5 more)
course_notes/: about_notes.html  index.html  index_notes.html
coursenotes/: index_notes.html
dev_tools/: git.html  index.html  tmux.html  typst.html  uv.html
docs/: .authors.yml  .meta.yml  CNAME  about.md  index.md
else/: about_else.html  index.html
javascripts/: anime.js  mathjax.js  time.js  toc.js  up_time.js
overrides/: main.html
page_template/: page_statistics.html
railway/: index_railway.html
research/: about_research.html  camera_calibration.html  gaussian_splatting.html  geometric_transformation.html  index.html  index_research.html  kalman_filter.html  kdtree.html  object_detection.html  yolo.html
ros/: index_ros.html
search/: search_index.js  search_index.json
stylesheets/: custom.css
(+492 files in other folders)
